--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -45,6 +45,7 @@
 
 .archive__item-title {
   margin-bottom: 0.25em;
+  margin-top: 0.25em;
   font-family: $sans-serif-narrow;
   line-height: initial;
   overflow: hidden;
